--- a/src/components/PageSelector/PageSelector.css
+++ b/src/components/PageSelector/PageSelector.css
@@ -10,7 +10,9 @@ body {
 } 
 
 .page-selector {
-  width: 370px;
+  width: 90%;
+  max-width: 370px;
+  min-width: 280px;
   background: #FFFFFF;
   border-radius: 6px;
   box-shadow: 0px 8px 15px rgba(20, 20, 20, 0.1),
@@ -49,4 +51,7 @@ body {
 .button-container {
   padding: 0 15px;
   margin-top: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
